--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start" : "node index.js"
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.4",
+    "express": "^5.2.1"
   }
 }
